began_menu_building

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.example.guess_for_max.MainActivity">
+    <item android:id ="@+id/action_newgame"
+          android:title="@string/newgame_menu"/>
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+          android:title="@string/settings_menu"/>
+    <item android:id="@+id/action_gamestats"
+          android:title="@string/stat_menu" />
+    <item android:id="@+id/action_about"
+        android:title="@string/about_menu" />
+    <item android:id="@+id/action_exit"
+          android:title="@string/exit_menu" />
+
 </menu>
